# fake-detector

./: .gitignore  AGENTS.md  BSDmakefile  CLAUDE.md  GNUmakefile  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
bindings/python/: README.md  pyproject.toml
bindings/python/examples/: flee_and_vote.py
bindings/python/fakedetector/: __init__.py  _native.py  api.py
bindings/python/tests/: test_binding.py
clp/: cases.clp  claims.clp  dossier.clp  social.clp  stance.clp  suspicion.clp  templates.clp
docs/: README.md  abi.md  bibliography.md  example-session.md  integration-crewrift.md  model.md  policy-guide.md
mk/: embed-clp.sh  fakedetector.pc.in  fd_exports.macos  fd_exports.map  sources.mk
src/: driver.c  fakedetector.c  fakedetector.h  fd_clips.c  fd_crewrift.h  fd_graph.c  fd_internal.h  fd_observe.c  fd_profile.c  fd_query.c  fd_render.c  fd_schema.c  fd_telemetry.c  perf.c
tests/: test_embedded_rules_contract.c  test_ingest_stats_contract.c  test_player_name_contract.c  test_query_run_contract.c  test_schema_validation_contract.c  test_suspicion_contract.c
tests/expected/: driver.out
